2020-10-17  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

	* Resolves #87928: Language switch and addQueryString for routing fails

2020-10-17  Stanislas Rolland  <typo32020(arobas)sjbr.ca>

	* Resolves #91829: TYPO3 10 Support
	* Update version to 7.0.0

2018-10-20  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86705: Move plugin registration to TCA overrides
	* Update version to 6.5.2

2018-10-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86692: Use language aspect of frontend context
	* Resolves #86693: Incorrect keywords format for composer

2018-10-15  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86660: Migrate to TYPO3 9 LTS
	* Update version to 6.5.0

2018-02-10  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #83562: Use standard SQL table definition
	* Update version to 6.4.3

2017-04-11  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update version to 6.4.2
	* Resolves #80815: Remove deprecated TCA option show_thumbs

2017-01-24  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Update requirements
	* Update version to 6.4.1

2017-01-07  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Cleanup extension configuration files
	* Follow-up to #79187: Use TYPO3 8 DB API

2017-01-06  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79187: Use TYPO3 8 DB API
	* Resolves #79188: Use registered icon in frontend
	* Resolves #79189: Migrate extension icon to svg
	* Resolves #76679: Wrong flag for chinese language
	* Update version to 6.4.0

2017-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79176: Missing renderType on TCA select definition
	* Resolves #79178: Migrate to LTS 7 icon factory
	* Resolves #78340: Compatibility with TYPO3 version 8.x and require TYPO3 7 LTS

2016-05-22  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #76096: Labels not working anymore after using the widget (Thanks to Makus Klein)
	* Update version to 6.3.4	

2016-03-10  Stanislas Rolland  <typo3(arobas)sjbr.ca>
